force-app/main/default/objects/Invoice__c/fields/Last_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Date__c</fullName>
    <description>Date when the last payment reminder was sent</description>
    <inlineHelpText
  >The most recent date a payment reminder email was sent to the customer</inlineHelpText>
    <label>Last Reminder Date</label>
    <type>DateTime</type>
</CustomField>