force-app/main/default/objects/Invoice__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description
  >Payment terms that determine when payment is due. Automatically calculates due date based on invoice date.</description>
    <inlineHelpText
  >Select payment terms. Due date will be calculated automatically: Net 15 (15 days), Net 30 (30 days), Net 45 (45 days), or Due on Receipt (same day).</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
                <default>true</default>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>