force-app/main/default/objects/Invoice__c/fields/Reminders_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminders_Sent__c</fullName>
    <description>Number of payment reminders sent for this invoice</description>
    <inlineHelpText>Tracks how many payment reminder emails have been sent to the customer</inlineHelpText>
    <label>Reminders Sent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>