force-app/main/default/objects/Invoice__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Invoice_Line_Item__c.Line_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>