force-app/main/default/objects/Invoice__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Subtotal__c)) &amp;&amp; NOT(ISBLANK(Tax_Rate__c)),
    Subtotal__c * Tax_Rate__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>