force-app/main/default/objects/Invoice__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>