force-app/main/default/objects/Invoice__c/recordTypes/High_Value_Invoice.recordType-meta.xml
<RecordType>
    <fullName>High_Value_Invoice</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>High-value invoices requiring additional approval and tracking</description>
    <label>High Value Invoice</label>
</RecordType>