force-app/main/default/objects/Invoice__c/validationRules/Cannot_Pay_Draft_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Pay_Draft_Invoice</fullName>
    <active>true</active>
    <description
  >Prevents marking draft invoices as paid. Invoice must be sent first.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &apos;Draft&apos;),
    ISPICKVAL(Status__c, &apos;Paid&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage
  >Cannot mark a draft invoice as paid. Please send it first.</errorMessage>
</ValidationRule>