force-app/main/default/objects/Invoice__c/validationRules/Due_Date_After_Invoice_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_After_Invoice_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Date__c &lt; Invoice_Date__c</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date must be on or after Invoice Date</errorMessage>
</ValidationRule>