force-app/main/default/objects/Invoice__c/validationRules/Due_Date_Consistent_Payment_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Consistent_Payment_Terms</fullName>
    <active>true</active>
    <description>Due Date should be consistent with Payment Terms selected</description>
    <errorConditionFormula>OR(
    AND(
        TEXT(Payment_Terms__c) = "Net 15",
        Due_Date__c != Invoice_Date__c + 15
    ),
    AND(
        TEXT(Payment_Terms__c) = "Net 30", 
        Due_Date__c != Invoice_Date__c + 30
    ),
    AND(
        TEXT(Payment_Terms__c) = "Net 45",
        Due_Date__c != Invoice_Date__c + 45  
    ),
    AND(
        TEXT(Payment_Terms__c) = "Due on Receipt",
        Due_Date__c != Invoice_Date__c
    )
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date must be consistent with selected Payment Terms (Net 15 = +15 days, Net 30 = +30 days, Net 45 = +45 days, Due on Receipt = same day).</errorMessage>
</ValidationRule>