force-app/main/default/objects/Invoice__c/validationRules/Tax_Rate_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Rate_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Tax_Rate__c &lt; 0,
    Tax_Rate__c &gt; 1
)</errorConditionFormula>
    <errorDisplayField>Tax_Rate__c</errorDisplayField>
    <errorMessage>Tax Rate must be between 0% and 100%</errorMessage>
</ValidationRule>